force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/Autodial_Campaign_Members_Filtres__c.object-meta.xml
<CustomObject>
    <description>Stores filter criteria for Autodial Campaigns to determine which records should be included in the campaign.</description>
    <label>Autodial Campaign Members Filter</label>
    <nameField>
        <displayFormat>ACMF-{00000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autodial Campaign Members Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>