force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/fields/autodial_campaign__c.field-meta.xml
<CustomField>
    <fullName>autodial_campaign__c</fullName>
    <label>Autodial Campaign</label>
    <referenceTo>Autodial_Campaign__c</referenceTo>
    <relationshipLabel>Autodial Campaign Members Filters</relationshipLabel>
    <relationshipName>Autodial_Campaign_Members_Filtres</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>