force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/fields/field__c.field-meta.xml
<CustomField>
    <fullName>field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>