force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/fields/object_type__c.field-meta.xml
<CustomField>
    <fullName>object_type__c</fullName>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>