force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/fields/operator__c.field-meta.xml
<CustomField>
    <fullName>operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>