force-app/main/default/objects/Autodial_Campaign_Members_Filtres__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>